our feature section  done

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -203,6 +203,144 @@
             </div>
         </div>
         <!-- creator meeting page ends -->
+
+
+        <!-- multycolor page starts -->
+        <div class="grid bg-[#f3f3f1] py-[80px]">
+            <div class="grid justify-center items-center px-[12px] space-y-8">
+                <div class="flex  items-center bg-[#e9c0e9] rounded-[30px] p-[16px]">
+                    <div class="grid justify-center items-center bg-cover">
+                        <img src="./assets/images/features1.jpg" alt="" class="rounded-[30px] h-[300px]">
+                        <div
+                            class="flex justify-center items-center pt-[14px] text-start px-[16px] text-[22px] text-[#502274] font-semibold">
+                            <p class="pt-[18px] underline">
+                                Promote your brand on social
+                                media
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2nd -->
+                <div class="flex  items-center bg-[#d2dc1d] rounded-[30px] p-[16px]">
+                    <div class="grid justify-center items-center bg-cover">
+                        <img src="./assets/images/features2.jpg" alt="" class="rounded-[30px] h-[300px]">
+                        <div
+                            class="flex justify-center items-center pt-[14px] text-start px-[16px] text-[22px] text-[#502274] font-semibold">
+                            <p class="pt-[18px] underline">
+                                Learn how to create unique
+                                content
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3rd -->
+                <div class="flex  items-center bg-[#780016] rounded-[30px] p-[16px]">
+                    <div class="grid justify-center items-center bg-cover">
+                        <img src="./assets/images/features3.jpg" alt="" class="rounded-[30px] h-[300px]">
+                        <div
+                            class="flex justify-center items-center pt-[14px] text-start px-[16px] text-[22px] text-[#e7b4d8] font-semibold">
+                            <p class="pt-[18px] underline">
+                                Become an influencer and promote
+                                yourself on social media
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- multycolor page ends -->
+
+
+        <div class="grid bg-[#d2dc1d] py-[64px]">
+            <div class="grid justify-center items-center px-[12px]">
+                <div class="grid justify-center items-center text-[#232323]">
+                    <span class="text-[38.4px] w-full text-center font-bold">
+                        Our Features
+                    </span>
+                    <span class="w-full text-center text-[18.24px] py-[12px]">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae erat. Integer aliquam,
+                        lorem vitae dapibus sollicitudin, nibh nisl egestas enim, ut dapibus odio augue tempus venenatis
+                        mi semper.
+                    </span>
+                </div>
+                <!-- 1st -->
+                <div class="grid justify-center items-center mt-[32px] space-y-[50px]">
+                    <div class="grid items-center bg-white  rounded-[2rem] ">
+                        <div class="grid justify-center items-center place-items-center w-full py-[32px]">
+                            <div class="w-[80px] h-[80px] rounded-full flex justify-center items-center  bg-[#d2dc1d]">
+                                <img src="./assets/images/lamp.png" alt="" class="h-[40px] w-[40px]">
+                            </div>
+                            <div
+                                class="grid justify-center text-center items-center px-[16px] pt-[36px] space-y-[10px]">
+                                <span class="font-bold text-[21.6px]">
+                                    Creation
+                                </span>
+                                <span class="text-center text-[18.24px] leading-[26px]">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae erat.
+                                    Integer
+                                    aliquam, lorem vitae dapibus sollicitudin, nibh nisl egestas enim, ut dapibus odio
+                                    augue
+                                    venenatis mi. Ut tempus dui at mi semper, vel dapibus nisl consectetur. Phasellus
+                                    consectetur sapien non lacus imperdiet dapibus. In facilisis sed mi rutrum
+                                    consequat.
+                                    Sed augue sem diam.
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 2nd -->
+                    <div class="grid items-center bg-white  rounded-[2rem]">
+                        <div class="grid justify-center items-center place-items-center w-full py-[32px]">
+                            <div class="w-[80px] h-[80px] rounded-full flex justify-center items-center  bg-[#d2dc1d]">
+                                <img src="./assets/images/prediction.png" alt="" class="h-[40px] w-[40px]">
+                            </div>
+                            <div
+                                class="grid justify-center text-center items-center px-[16px] pt-[36px] space-y-[10px]">
+                                <span class="font-bold text-[21.6px]">
+                                    Promotion
+                                </span>
+                                <span class="text-center text-[18.24px] leading-[26px]">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae erat.
+                                    Integer
+                                    aliquam, lorem vitae dapibus sollicitudin, nibh nisl egestas enim, ut dapibus odio
+                                    augue
+                                    venenatis mi. Ut tempus dui at mi semper, vel dapibus nisl consectetur. Phasellus
+                                    consectetur sapien non lacus imperdiet dapibus. In facilisis sed mi rutrum
+                                    consequat.
+                                    Sed augue sem diam.
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 3rd -->
+                    <div class="grid items-center bg-white  rounded-[2rem] ">
+                        <div class="grid justify-center items-center place-items-center w-full py-[32px]">
+                            <div class="w-[80px] h-[80px] rounded-full flex justify-center items-center  bg-[#d2dc1d]">
+                                <img src="./assets/images/paint.png" alt="" class="h-[40px] w-[40px]">
+                            </div>
+                            <div
+                                class="grid justify-center text-center items-center px-[16px] pt-[36px] space-y-[10px]">
+                                <span class="font-bold text-[21.6px]">
+                                    Branding
+                                </span>
+                                <span class="text-center text-[18.24px] leading-[26px]">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae erat.
+                                    Integer
+                                    aliquam, lorem vitae dapibus sollicitudin, nibh nisl egestas enim, ut dapibus odio
+                                    augue
+                                    venenatis mi. Ut tempus dui at mi semper, vel dapibus nisl consectetur. Phasellus
+                                    consectetur sapien non lacus imperdiet dapibus. In facilisis sed mi rutrum
+                                    consequat.
+                                    Sed augue sem diam.
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
     <!-- over -->
 </body>
