our client section done

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -341,6 +341,27 @@
             </div>
         </div>
 
+
+        <!-- our client section starts -->
+        <div class="grid bg-[#f3f3f1] py-[80px]">
+            <div class="grid justify-center items-center">
+                <span class="text-[38.4px] text-[#1e2330] font-bold">Our Clients</span>
+            </div>
+            <!-- 1st -->
+            <div class="grid items-center px-[12px] space-y-[32px] mt-[32px] mb-[32px]">
+                <div class="flex justify-center items-center rounded-[2rem] bg-white h-[124px]">
+                    <img src="./assets/images/1.png" alt="1st image" class="h-[92px]">
+                </div>
+                <div class="flex justify-center items-center rounded-[2rem] bg-white h-[124px]">
+                    <img src="./assets/images/2.png" alt="1st image" class="h-[92px]">
+                </div>
+                <div class="flex justify-center items-center rounded-[2rem] bg-white h-[124px]">
+                    <img src="./assets/images/3.png" alt="1st image" class="h-[92px]">
+                </div>
+            </div>
+        </div>
+        <!-- our client section ends -->
+
     </div>
     <!-- over -->
 </body>
