pricing section done

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -362,6 +362,104 @@
         </div>
         <!-- our client section ends -->
 
+        <div class="grid bg-[#e9c0e9] py-[96px]">
+            <div class="grid  items-center px-[12px]">
+                <div class="grid  items-center">
+                    <span class="font-bold text-[38.4px]  text-center text-[#232323]">Pricing Plan</span>
+                    <div class="grid  mt-[24px] space-y-[30px]">
+                        <!-- 1st -->
+                        <div class="grid  items-center rounded-[2rem] bg-white overflow-hidden">
+                            <div class="grid justify-start items-center bg-[#502274] py-[16px] px-[32px] space-y-[8px]">
+                                <span class="text-white font-bold text-[21.6px]">Premium</span>
+                                <div class="flex space-x-[4px] text-white text-[18.24px]">
+                                    <span class="font-bold">$24</span>
+                                    <span>usd/month</span>
+                                </div>
+                            </div>
+                            <div class="grid bg-white  items-center p-[16px]">
+                                <div
+                                    class="flex justify-center text-center text-[18.24px] place-items-center py-[16px]">
+                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas
+                                        massa.</span>
+                                </div>
+                                <div class="flex  items-center my-[9.6px]">
+                                    <button
+                                        class="rounded-[100px] w-full font-bold text-[#502274] border-2 border-[#502274] text-[18.24px] py-[20px] px-[32px]">Learn
+                                        More</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 2nd -->
+                        <div class="grid  items-center rounded-[2rem] bg-white overflow-hidden">
+                            <div class="grid justify-start items-center bg-[#502274] py-[16px] px-[32px] space-y-[8px]">
+                                <span class="text-white font-bold text-[21.6px]">Pro</span>
+                                <div class="flex space-x-[4px] text-white text-[18.24px]">
+                                    <span class="font-bold">$9</span>
+                                    <span>usd/month</span>
+                                </div>
+                            </div>
+                            <div class="grid bg-white  items-center p-[16px]">
+                                <div
+                                    class="flex justify-center text-center text-[18.24px] place-items-center py-[16px]">
+                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas
+                                        massa.</span>
+                                </div>
+                                <div class="flex  items-center my-[9.6px]">
+                                    <button
+                                        class="rounded-[100px] w-full font-bold text-[#502274] border-2 border-[#502274] text-[18.24px] py-[20px] px-[32px]">Learn
+                                        More</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 3rd -->
+                        <div class="grid  items-center rounded-[2rem] bg-white overflow-hidden">
+                            <div class="grid justify-start items-center bg-[#502274] py-[16px] px-[32px] space-y-[8px]">
+                                <span class="text-white font-bold text-[21.6px]">Starter</span>
+                                <div class="flex space-x-[4px] text-white text-[18.24px]">
+                                    <span class="font-bold">$6</span>
+                                    <span>usd/month</span>
+                                </div>
+                            </div>
+                            <div class="grid bg-white  items-center p-[16px]">
+                                <div
+                                    class="flex justify-center text-center text-[18.24px] place-items-center py-[16px]">
+                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas
+                                        massa.</span>
+                                </div>
+                                <div class="flex  items-center my-[9.6px]">
+                                    <button
+                                        class="rounded-[100px] w-full font-bold text-[#502274] border-2 border-[#502274] text-[18.24px] py-[20px] px-[32px]">Learn
+                                        More</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 4th -->
+                        <div class="grid  items-center rounded-[2rem] bg-white overflow-hidden">
+                            <div class="grid justify-start items-center bg-[#502274] py-[16px] px-[32px] space-y-[8px]">
+                                <span class="text-white font-bold text-[21.6px]">Free</span>
+                                <div class="flex space-x-[4px] text-white text-[18.24px]">
+                                    <span class="font-bold">$0</span>
+                                    <span>usd/month</span>
+                                </div>
+                            </div>
+                            <div class="grid bg-white  items-center p-[16px]">
+                                <div
+                                    class="flex justify-center text-center text-[18.24px] place-items-center py-[16px]">
+                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas
+                                        massa.</span>
+                                </div>
+                                <div class="flex  items-center my-[9.6px]">
+                                    <button
+                                        class="rounded-[100px] w-full font-bold text-[#502274] border-2 border-[#502274] text-[18.24px] py-[20px] px-[32px]">Learn
+                                        More</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <!-- over -->
 </body>
