content section done

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -362,6 +362,8 @@
         </div>
         <!-- our client section ends -->
 
+
+        <!-- pricing plan section starts -->
         <div class="grid bg-[#e9c0e9] py-[96px]">
             <div class="grid  items-center px-[12px]">
                 <div class="grid  items-center">
@@ -459,6 +461,74 @@
                 </div>
             </div>
         </div>
+        <!-- pricing plan section ends -->
+
+
+        <!-- share your content section starts -->
+        <div class="grid bg-[#ffffff] pt-[96px] pb-[80px] px-[12px]">
+            <div class="flex justify-center items-center">
+                <span class="text-[21.6px] font-bold">
+                    Share Your Content
+                </span>
+            </div>
+            <div class="grid   items-center mt-[50px] space-y-[30px]">
+                <div class="flex items-center ">
+                    <div class="flex justify-center items-center pr-[32px]">
+                        <i class="fa-brands fa-instagram fa-3x text-[#502274]"></i>
+                    </div>
+                    <div class="grid justify-start items-start pr-[12px] leading-[24px]">
+                        <span class="font-bold text-[18.24px]">Instagram</span>
+                        <span class="text-[17.12px]">Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </div>
+                <div class="flex items-center ">
+                    <div class="flex justify-center items-center pr-[24px]">
+                        <i class="fa-brands fa-twitch fa-3x text-[#502274]"></i>
+                    </div>
+                    <div class="grid justify-start items-start pr-[12px] leading-[24px]">
+                        <span class="font-bold text-[18.24px]">Twitch</span>
+                        <span class="text-[17.12px]">Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </div>
+                <div class="flex items-center ">
+                    <div class="flex justify-center items-center pr-[24px]">
+                        <i class="fa-brands fa-twitter fa-3x text-[#502274]"></i>
+                    </div>
+                    <div class="grid justify-start items-start pr-[12px] leading-[24px]">
+                        <span class="font-bold text-[18.24px]">Twitter</span>
+                        <span class="text-[17.12px]">Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </div>
+                <div class="flex items-center ">
+                    <div class="flex justify-center items-center pr-[20px]">
+                        <i class="fa-brands fa-youtube fa-3x text-[#502274]"></i>
+                    </div>
+                    <div class="grid justify-start items-start pr-[12px] leading-[24px]">
+                        <span class="font-bold text-[18.24px]">YouTube</span>
+                        <span class="text-[17.12px]">Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </div>
+                <div class="flex items-center ">
+                    <div class="flex justify-center items-center pr-[32px]">
+                        <i class="fa-brands fa-tiktok fa-3x text-[#502274]"></i>
+                    </div>
+                    <div class="grid justify-start items-start pr-[12px] leading-[24px]">
+                        <span class="font-bold text-[18.24px]">TikTok</span>
+                        <span class="text-[17.12px]">Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </div>
+                <div class="flex items-center ">
+                    <div class="flex justify-center items-center pr-[28px]">
+                        <i class="fa-brands fa-facebook fa-3x text-[#502274]"></i>
+                    </div>
+                    <div class="grid justify-start items-start pr-[12px] leading-[24px]">
+                        <span class="font-bold text-[18.24px]">Facebokk</span>
+                        <span class="text-[17.12px]">Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </div>   
+            </div>
+        </div>
+        <!-- share your content section ends -->
 
     </div>
     <!-- over -->
