frequently asked question section done

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -522,16 +522,155 @@
                         <i class="fa-brands fa-facebook fa-3x text-[#502274]"></i>
                     </div>
                     <div class="grid justify-start items-start pr-[12px] leading-[24px]">
-                        <span class="font-bold text-[18.24px]">Facebokk</span>
+                        <span class="font-bold text-[18.24px]">Facebook</span>
                         <span class="text-[17.12px]">Lorem ipsum dolor sit amet.</span>
                     </div>
-                </div>   
+                </div>
             </div>
         </div>
         <!-- share your content section ends -->
 
+
+        <!-- faqs section starts -->
+        <div class="grid py-[80px] bg-[#780016]">
+            <div class="grid items-center px-[12px] ">
+                <div class="flex justify-center items-center pb-[50px]">
+                    <span class="uppercase text-[32.8px] text-[#e5bde5] font-bold">FAQ</span>
+                </div>
+                <div class="grid space-y-[20px]">
+                    <div class="grid justify-center items-center ">
+                        <div class="grid justify-center items-center bg-[#49000d]  rounded-[2rem] ">
+                            <div class="flex justify-around items-center py-[16px] px-[32px] faqdropdown ">
+                                <span class="text-[21.6px] py-[16px] text-[#e5c0e9]  leading-[30px]">Lorem ipsum dolor
+                                    sit
+                                    amet?
+                                </span>
+                                <span class="text-white"><i
+                                        class="fa-solid fa-chevron-down fa-lg dropdownarrow duration-[0.3s]"></i></span>
+                            </div>
+                            <div class=" px-[32px]  text-[17.12px] text-[#e5c0e9] overflow-hidden h-[0px] maindropdown">
+                                <span class="">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Fusce vestibulum laoreet tincidunt. Proin et sapien
+                                    scelerisque, ornare lectus eget, iaculis lectus. Pellentesque viverra molestie
+                                    tortor. Nunc sed interdum est, in maximus diam. Donec eu tellus dictum, gravida
+                                    velit et, sagittis arcu. Proin et lectus dapibus. Cras fringilla elit velit
+                                    placerat tortor mollis cursus. </span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 2nd -->
+                    <div class="grid justify-center items-center ">
+                        <div class="grid justify-center items-center bg-[#49000d]  rounded-[2rem] ">
+                            <div class="flex justify-around items-center py-[16px] px-[32px] faqdropdowntwo ">
+                                <span class="text-[21.6px] py-[16px] text-[#e5c0e9]  leading-[30px]">LPellentesque
+                                    nec purus ut massa?
+                                </span>
+                                <span class="text-white"><i
+                                        class="fa-solid fa-chevron-down fa-lg dropdownarrowtwo duration-[0.3s]"></i></span>
+                            </div>
+                            <div
+                                class=" px-[32px]  text-[17.12px] text-[#e5c0e9] overflow-hidden h-[0px] maindropdowntwo">
+                                <span class="">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Fusce vestibulum laoreet tincidunt. Proin et sapien
+                                    scelerisque, ornare lectus eget, iaculis lectus. Pellentesque viverra molestie
+                                    tortor. Nunc sed interdum est, in maximus diam. Donec eu tellus dictum, gravida
+                                    velit et, sagittis arcu. Proin et lectus dapibus. Cras fringilla elit velit
+                                    placerat tortor mollis cursus. </span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 3rd -->
+                    <div class="grid justify-center items-center ">
+                        <div class="grid justify-center items-center bg-[#49000d]  rounded-[2rem] ">
+                            <div class="flex justify-around items-center py-[16px] px-[32px] faqdropdownthree ">
+                                <span class="text-[21.6px] py-[16px] text-[#e5c0e9]  leading-[30px]">Mauris
+                                    porttitor tempor orci vitae?
+                                </span>
+                                <span class="text-white"><i
+                                        class="fa-solid fa-chevron-down fa-lg dropdownarrowthree duration-[0.3s]"></i></span>
+                            </div>
+                            <div
+                                class=" px-[32px]  text-[17.12px] text-[#e5c0e9] overflow-hidden h-[0px] maindropdownthree">
+                                <span class="">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Fusce vestibulum laoreet tincidunt. Proin et sapien
+                                    scelerisque, ornare lectus eget, iaculis lectus. Pellentesque viverra molestie
+                                    tortor. Nunc sed interdum est, in maximus diam. Donec eu tellus dictum, gravida
+                                    velit et, sagittis arcu. Proin et lectus dapibus. Cras fringilla elit velit
+                                    placerat tortor mollis cursus. </span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 4rd -->
+                    <div class="grid justify-center items-center ">
+                        <div class="grid justify-center items-center bg-[#49000d]  rounded-[2rem] ">
+                            <div class="flex justify-around items-center py-[16px] px-[32px] faqdropdownfour ">
+                                <span class="text-[21.6px] py-[16px] text-[#e5c0e9]  leading-[30px]">Ut ultricies
+                                    imperdiet volutpat?
+                                </span>
+                                <span class="text-white"><i
+                                        class="fa-solid fa-chevron-down fa-lg dropdownarrowfour duration-[0.3s]"></i></span>
+                            </div>
+                            <div
+                                class=" px-[32px]  text-[17.12px] text-[#e5c0e9] overflow-hidden h-[0px] maindropdownfour">
+                                <span class="">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Fusce vestibulum laoreet tincidunt. Proin et sapien
+                                    scelerisque, ornare lectus eget, iaculis lectus. Pellentesque viverra molestie
+                                    tortor. Nunc sed interdum est, in maximus diam. Donec eu tellus dictum, gravida
+                                    velit et, sagittis arcu. Proin et lectus dapibus. Cras fringilla elit velit
+                                    placerat tortor mollis cursus. </span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 5th -->
+                    <div class="grid justify-center items-center ">
+                        <div class="grid justify-center items-center bg-[#49000d]  rounded-[2rem] ">
+                            <div class="flex justify-around items-center py-[16px] px-[32px] faqdropdownfive ">
+                                <span class="text-[21.6px] py-[16px] text-[#e5c0e9]  leading-[30px]">Mauris dui
+                                    elit porta quis justo?
+                                </span>
+                                <span class="text-white"><i
+                                        class="fa-solid fa-chevron-down fa-lg dropdownarrowfive duration-[0.3s]"></i></span>
+                            </div>
+                            <div
+                                class=" px-[32px]  text-[17.12px] text-[#e5c0e9] overflow-hidden h-[0px] maindropdownfive">
+                                <span class="">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Fusce vestibulum laoreet tincidunt. Proin et sapien
+                                    scelerisque, ornare lectus eget, iaculis lectus. Pellentesque viverra molestie
+                                    tortor. Nunc sed interdum est, in maximus diam. Donec eu tellus dictum, gravida
+                                    velit et, sagittis arcu. Proin et lectus dapibus. Cras fringilla elit velit
+                                    placerat tortor mollis cursus. </span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 6th -->
+                    <div class="grid justify-center items-center ">
+                        <div class="grid justify-center items-center bg-[#49000d]  rounded-[2rem] ">
+                            <div class="flex justify-around items-center py-[16px] px-[32px] faqdropdownsix ">
+                                <span class="text-[21.6px] py-[16px] text-[#e5c0e9]  leading-[30px]">Nulla laoreet
+                                    urna purus sed ultricies?
+                                </span>
+                                <span class="text-white"><i
+                                        class="fa-solid fa-chevron-down fa-lg dropdownarrowsix duration-[0.3s]"></i></span>
+                            </div>
+                            <div
+                                class=" px-[32px]  text-[17.12px] text-[#e5c0e9] overflow-hidden h-[0px] maindropdownsix">
+                                <span class="">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Fusce vestibulum laoreet tincidunt. Proin et sapien
+                                    scelerisque, ornare lectus eget, iaculis lectus. Pellentesque viverra molestie
+                                    tortor. Nunc sed interdum est, in maximus diam. Donec eu tellus dictum, gravida
+                                    velit et, sagittis arcu. Proin et lectus dapibus. Cras fringilla elit velit
+                                    placerat tortor mollis cursus. </span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- faqs section ends -->
     </div>
     <!-- over -->
 </body>
 
 </html>
+<script src="./assets/js/script.js"></script>
