--- a/influencer/index.html
+++ b/influencer/index.html
@@ -668,6 +668,20 @@
             </div>
         </div>
         <!-- faqs section ends -->
+
+        <div class="grid py-[80px] bg-[#ffffff]">
+            <div class="grid items-center space-y-[36px]">
+                <div class="flex justify-center items-center">
+                    <span class="text-[38.4px] font-bold text-[#232323]">Our office</span>
+                </div>
+                <div class="flex  items-center px-[12px] ">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.7590330315556!2d70.0642461748941!3d22.475687779560793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39576b6fd28d0e13%3A0xb8f457d501638403!2sNeo%20Square%20Mall!5e0!3m2!1sen!2sin!4v1700312225342!5m2!1sen!2sin"
+                        class="w-full h-[500px] rounded-[2rem]" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- over -->
 </body>
