--- a/influencer/index.html
+++ b/influencer/index.html
@@ -669,6 +669,8 @@
         </div>
         <!-- faqs section ends -->
 
+
+        <!-- maps section starts -->
         <div class="grid py-[80px] bg-[#ffffff]">
             <div class="grid items-center space-y-[36px]">
                 <div class="flex justify-center items-center">
@@ -682,6 +684,72 @@
                 </div>
             </div>
         </div>
+        <!-- maps section ends -->
+
+
+        <!-- footer section starts -->
+        <div class="grid bg-[#502274] py-[80px] px-[12px]">
+            <div class="grid items-center">
+                <div class="grid justify-center items-center bg-white rounded-[2rem] py-[32px]">
+                    <div class="grid justify-center items-center">
+                        <div class="grid pb-[8px]">
+                            <span class="font-semibold text-[21.6px]">Company</span>
+                        </div>
+                        <div class="grid  items-center text-center text-[17.12px] space-y-[6px]">
+                            <a href="" class="">About</a>
+                            <a href="" class="">Press</a>
+                            <a href="" class="">Career</a>
+                            <a href="" class="">Social</a>
+                            <a href="" class="">Conatct</a>
+                        </div>
+                    </div>
+                    <div class="grid justify-center items-center pt-[30px]">
+                        <div class="grid pb-[8px]">
+                            <span class="font-semibold text-[21.6px]">Features</span>
+                        </div>
+                        <div class="grid  items-center text-center text-[17.12px] space-y-[6px]">
+                            <a href="" class="">Branding</a>
+                            <a href="" class="">Promotion</a>
+                            <a href="" class="">Design</a>
+                            <a href="" class="">Creative</a>
+                            <a href="" class="">Production</a>
+                        </div>
+                    </div>
+                    <div class="grid justify-center items-center pt-[30px]">
+                        <div class="grid pb-[8px]">
+                            <span class="font-semibold text-[21.6px]">Support</span>
+                        </div>
+                        <div class="grid  items-center text-center text-[17.12px] space-y-[6px]">
+                            <a href="" class="">Help</a>
+                            <a href="" class="">Info</a>
+                            <a href="" class="">Contacts</a>
+                            <a href="" class="">FAQ</a>
+                            <a href="" class="">Report</a>
+                        </div>
+                    </div>
+                    <div class="grid justify-center items-center pt-[30px]">
+                        <div class="grid pb-[8px]">
+                            <span class="font-semibold text-[21.6px]">About</span>
+                        </div>
+                        <div class="grid  items-center text-center text-[17.12px] space-y-[6px]">
+                            <a href="" class="">History</a>
+                            <a href="" class="">Clients</a>
+                            <a href="" class="">Teams</a>
+                            <a href="" class="">Brands</a>
+                            <a href="" class="">Tearms</a>
+                        </div>
+                    </div>
+                    <!-- <div class="grid justify-center items-center">
+                        <div class="grid space-y-8 bg-red-600 w-full">
+                            <a href="" class="text-[17.12px] bg-[#1e2330] text-white font-semibold py-[20px] px-[32px]  rounded-[2rem]">Log in</a>
+                            <a href="" class="text-[17.12px] bg-[#d2dc1d] rounded-[2rem] py-[20px] px-[32px]  font-semibold">Read More</a>
+                        </div>
+                    </div> -->
+                </div>
+
+            </div>
+        </div>
+        <!-- footer section ends -->
     </div>
     <!-- over -->
 </body>
