design completed responsive left

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -690,7 +690,7 @@
         <!-- footer section starts -->
         <div class="grid bg-[#502274] py-[80px] px-[12px]">
             <div class="grid items-center">
-                <div class="grid justify-center items-center bg-white rounded-[2rem] py-[32px]">
+                <div class="grid  items-center bg-white rounded-[2rem] py-[32px]">
                     <div class="grid justify-center items-center">
                         <div class="grid pb-[8px]">
                             <span class="font-semibold text-[21.6px]">Company</span>
@@ -739,12 +739,37 @@
                             <a href="" class="">Tearms</a>
                         </div>
                     </div>
-                    <!-- <div class="grid justify-center items-center">
-                        <div class="grid space-y-8 bg-red-600 w-full">
-                            <a href="" class="text-[17.12px] bg-[#1e2330] text-white font-semibold py-[20px] px-[32px]  rounded-[2rem]">Log in</a>
-                            <a href="" class="text-[17.12px] bg-[#d2dc1d] rounded-[2rem] py-[20px] px-[32px]  font-semibold">Read More</a>
+                    <div class="grid items-center">
+                        <div class="grid justify-center   w-full pt-[100px] ">
+                            <div class="grid space-y-[20px]">
+                                <div class="flex justify-center">
+                                    <a href=""
+                                        class="text-[17.12px] bg-[#1e2330] text-white font-semibold py-[20px] px-[32px]  rounded-[2rem]">Log
+                                        in</a>
+                                </div>
+                                <div class="flex justify-center">
+                                    <a href=""
+                                        class="text-[17.12px] bg-[#d2dc1d] rounded-[2rem] py-[20px] px-[32px]  font-semibold">Read
+                                        More</a>
+                                </div>
+                            </div>
+                            <div class="flex justify-center items-center space-x-[8px] py-[20px]">
+                                <div
+                                    class="flex justify-center items-center text-white h-[56px] w-[56px] bg-black rounded-full ">
+                                    <i class="fa-brands fa-facebook-f fa-lg"></i>
+                                </div>
+                                <div
+                                    class="flex justify-center items-center text-white h-[56px] w-[56px] bg-black rounded-full ">
+                                    <i class="fa-brands fa-twitter fa-lg"></i>
+                                </div>
+                                <div
+                                    class="flex justify-center items-center text-white h-[56px] w-[56px] bg-black rounded-full ">
+                                    <i class="fa-brands fa-instagram fa-lg"></i>
+                                </div>
+
+                            </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
 
             </div>
